changed to Deque in API